# Neuroagent

./: .env.compose-test  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/memory/: embedder.py  long_term.py  short_term.py
backend/app/agent/models/: clients.py  router.py
backend/app/agent/nodes/: executor.py  memory_reader.py  memory_writer.py  planner.py  router.py  synthesizer.py
backend/app/agent/tools/: api_caller.py  browser.py  code_executor.py  web_search.py
backend/app/api/v1/: agent.py  auth.py  health.py  router.py  sessions.py
backend/app/db/: base.py  models.py
backend/app/schemas/: agent.py  auth.py  session.py
backend/app/services/: auth_service.py  session_service.py
backend/app/utils/: security.py  streaming.py  tracing.py
backend/tests/: conftest.py  test_agent_endpoint.py  test_agent_graph.py  test_auth.py  test_eval.py  test_health.py  test_tools.py  test_tracing.py
backend/tests/eval/: __init__.py  benchmark.py  dataset.py  scoring.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: setup_pinecone.py
(+29 files in other folders)
